--- a/contact-us.html
+++ b/contact-us.html
@@ -356,7 +356,7 @@
         <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
           <div class="team-card">
             <div class="team-img-wrapper">
-              <img class="team-img" src="images\STUDENT TEAM\2023_Team\Soumya Sharma.jpeg">
+              <img class="team-img" src="images\STUDENT TEAM\2023_Team\Soumya Sharma-zoomed.jpeg">
               <div class="overlayteam" style="text-align: center;"><a href="https://www.linkedin.com/in/soumya-sharma29"
                   target="_blank">
                   <i class="fa fa-linkedin-square" style="font-style: normal;"></i>
