--- a/our-alumni.html
+++ b/our-alumni.html
@@ -236,8 +236,8 @@
         </section>
         <section class="section section-lg">
             <div class="container">
-                <div class="row row-50 justify-content-center justify-content-lg-between">
-                    <div class="col-md-10 col-lg-6 col-xl-5">
+                <div class="row row-50 justify-content-center">
+                    <div class="col-md-10 col-lg-11">
                         <h3 class="wow-outer"><span class="wow slideInDown">Who We Are</span></h3>
                         <p class="wow-outer"><span class="wow slideInDown text-justify" data-wow-delay=".05s">The Alumni
                                 Association
@@ -261,11 +261,11 @@
                                 respective fields of expertise.</span></p>
                         <div class="wow-outer button-outer"><a
                                 class="button button-lg button-primary button-winona wow slideInDown"
-                                data-wow-delay=".1s" href="about-us.html">Learn more</a></div>
+                                data-wow-delay=".1s" href="contact-us.html">Learn more</a></div>
                     </div>
-                    <div id="alumniIntro" class="col-md-10 col-lg-6"><img class="img-responsive"
+                    <!-- <div id="alumniIntro" class="col-md-10 col-lg-6"><img class="img-responsive"
                             src="images/services-1-570x368.jpg" alt="" width="570" height="368" />
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
@@ -330,9 +330,9 @@
 The professors in my department were more than educators, they were mentors and champions of our success. I am deeply grateful for their unwavering support and expert guidance. It is with great pride that I claim CCET as my alma mater and highly recommend it to anyone seeking a well-rounded, enriching education.
                                         </p>
                                 </div>
-                                <div class="quote-light-footer"><img class="quote-light-image"
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-the-oldbrand-83x64.png" alt="" width="83" height="64" />
-                                </div>
+                                </div> -->
                             </blockquote>
                         </div>
                         <div class="item">
@@ -353,9 +353,9 @@ The professors in my department were more than educators, they were mentors and 
                                         providing
                                         wonderful opportunities to students to start their career. </p>
                                 </div>
-                                <div class="quote-light-footer"><img class="quote-light-image"
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-havana-kabana-96x64.png" alt="" width="96" height="64" />
-                                </div>
+                                </div> -->
                             </blockquote>
                         </div>
                         <div class="item">
@@ -389,9 +389,9 @@ The professors in my department were more than educators, they were mentors and 
                                         able to
                                         improve my technical skills , communication skills and overall exposure.</p>
                                 </div>
-                                <div class="quote-light-footer"><img class="quote-light-image"
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
-                                </div>
+                                </div> -->
                             </blockquote>
                         </div>
                         <div class="item">
@@ -416,9 +416,9 @@ The professors in my department were more than educators, they were mentors and 
                                         played biggest
                                         role in that. I would like to express my gratitude to TPC , CCET.</p>
                                 </div>
-                                <div class="quote-light-footer"><img class="quote-light-image"
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-hillplan-84x64.png" alt="" width="84" height="64" />
-                                </div>
+                                </div> -->
                             </blockquote>
                         </div>
                         <div class="item">
@@ -444,9 +444,9 @@ The professors in my department were more than educators, they were mentors and 
                                         preparing us for
                                         corporate world. TPC helped us get ready for our career.</p>
                                 </div>
-                                <div class="quote-light-footer"><img class="quote-light-image"
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-brownie-103x61.png" alt="" width="103" height="61" />
-                                </div>
+                                </div> -->
                             </blockquote>
                         </div>
                         <div class="item">
@@ -466,9 +466,9 @@ The professors in my department were more than educators, they were mentors and 
                                         training
                                         and placements</p>
                                 </div>
-                                <div class="quote-light-footer"><img class="quote-light-image"
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
-                                </div>
+                                </div> -->
                             </blockquote>
                         </div>
                         <div class="item">
@@ -491,9 +491,9 @@ The professors in my department were more than educators, they were mentors and 
                                         I am
                                         grateful to CCET and TPC for giving me a platform to learn and grow.</p>
                                 </div>
-                                <div class="quote-light-footer"><img class="quote-light-image"
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
-                                </div>
+                                </div> -->
                             </blockquote>
                         </div>
                         <div class="item">
@@ -512,9 +512,9 @@ The professors in my department were more than educators, they were mentors and 
                                         events that
                                         I took part helped me to grow my confidence level.</p>
                                 </div>
-                                <div class="quote-light-footer"><img class="quote-light-image"
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
-                                </div>
+                                </div> -->
                             </blockquote>
                         </div>
                         <div class="item">
@@ -539,9 +539,9 @@ The professors in my department were more than educators, they were mentors and 
                                         The placement cell provides a lot of training and development to achieve a good
                                         job.</p>
                                 </div>
-                                <div class="quote-light-footer"><img class="quote-light-image"
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
-                                </div>
+                                </div> -->
                             </blockquote>
                         </div>
                         <div class="item">
@@ -559,9 +559,9 @@ The professors in my department were more than educators, they were mentors and 
                                     <p>TMy experience with TPC was very good. They were very supportive and helpful throughout the placement process and I was able to get 2 job offers at Godrej and Edurev. TPC organised the placement drives very well both in our own campus and other colleges as well and were available for any assistance.
                                     </p>
                                 </div>
-                                <div class="quote-light-footer"><img class="quote-light-image"
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
-                                </div>
+                                </div> -->
                             </blockquote>
                         </div>
                         <div class="item">
@@ -578,9 +578,9 @@ The professors in my department were more than educators, they were mentors and 
                                 <div class="quote-light-text">
                                     <p>Thank you all my professors and batchmates for being so helpful supportive and friendly throughout my placement. The things that I have learnt from them will be invaluable to my future placements and career.I also would like to specially thank the placement department for guiding and providing me a good platform for my career and also helped me to get as my first job in iCuerious Research Services LLP</p>
                                 </div>
-                                <div class="quote-light-footer"><img class="quote-light-image"
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
-                                </div>
+                                </div> -->
                             </blockquote>
                         </div>
                         <div class="item">
@@ -597,9 +597,9 @@ The professors in my department were more than educators, they were mentors and 
                                 <div class="quote-light-text">
                                     <p>My journey through CCET was pivotal in terms of providing me opportunities to learn and apply, which prepared me for my path ahead for management education and the corporate world. The ample amount of avenues, academic as well as extra curricular groomed me into a better individual by providing opportunities to groom and hone my talents in the college.</p>
                                 </div>
-                                <div class="quote-light-footer"><img class="quote-light-image"
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
-                                </div>
+                                </div> -->
                             </blockquote>
                         </div>
                         <div class="item">
@@ -616,9 +616,9 @@ The professors in my department were more than educators, they were mentors and 
                                 <div class="quote-light-text">
                                     <p>CCET has provided me great friends and colleagues who are like a family to me. Professors have helped me to grow and align my future goals. Special thanks to Sakib Sir in civil engineering department for the guidance and showing me the way to turn my degree into a progressive one.😇</p>
                                 </div>
-                                <div class="quote-light-footer"><img class="quote-light-image"
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
-                                </div>
+                                </div> -->
                             </blockquote>
                         </div>
                         <div class="item">
@@ -641,9 +641,9 @@ The professors in my department were more than educators, they were mentors and 
                                         Former Senior Systems Engineer at Infosys Ltd.
                                         </p>
                                 </div>
-                                <div class="quote-light-footer"><img class="quote-light-image"
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
-                                </div>
+                                </div> -->
                             </blockquote>
                         </div>
                         <div class="item">
@@ -663,9 +663,9 @@ From the moment I arrived on campus, I felt welcomed and supported by the facult
 One of the highlights of my college experience was the experiential learning opportunities that were available to me. Through internships, research projects, and amazing extra-curricular activity clubs, I was able to apply what I was learning in the classroom to real-world situations. These experiences helped me to develop valuable skills and knowledge that will serve me well in my future career. <br>
 Overall, my time at CCET exceeded my expectations in every way. I am confident that the education and experiences I gained there will continue to shape my life in meaningful ways for years to come. I would highly recommend CCET to anyone looking for a top-notch education in a supportive and enriching environment.</p>
                                 </div>
-                                <div class="quote-light-footer"><img class="quote-light-image"
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
-                                </div>
+                                </div> -->
                             </blockquote>
                         </div>
                         <div class="item">
@@ -682,9 +682,9 @@ Overall, my time at CCET exceeded my expectations in every way. I am confident t
                                 <div class="quote-light-text">
                                     <p>I am delighted to share my experience with the Training and Placement Cell (TPC) and the organization as a whole, which has been instrumental in helping me attain my academic and career goals. The support and guidance I received from TPC were invaluable in securing a job at Block8, which provided me with the much-needed confidence and knowledge to grow professionally.</p>
                                 </div>
-                                <div class="quote-light-footer"><img class="quote-light-image"
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
-                                </div>
+                                </div> -->
                             </blockquote>
                         </div>
                         <div class="item">
@@ -701,9 +701,9 @@ Overall, my time at CCET exceeded my expectations in every way. I am confident t
                                 <div class="quote-light-text">
                                     <p>Training and Placement Cell (TPC) have been instrumental in acting as a bridge between recruiters and college campus. TPC provided me with an interesting opportunity to work with people from diverse background striving for a common goal. I am thankful to respected teachers, staff and teammates for their valuable contribution, their guidance and support have helped me alot personally and professionally.</p>
                                 </div>
-                                <div class="quote-light-footer"><img class="quote-light-image"
+                                <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
-                                </div>
+                                </div> -->
                             </blockquote>
                         </div>
                     </div>
@@ -1088,7 +1088,7 @@ Overall, my time at CCET exceeded my expectations in every way. I am confident t
 
         <section class="section section-lg bg-gray-100">
             <div class="container">
-                <h3 class="text-center mb-4">Connect With Us</h3>
+                <h3 class="text-center mb-4">Alumni Connect</h3>
                 <div class="alumniForm">
                     <div class="row">
                         <div class="col-12">
