--- a/contact-us.html
+++ b/contact-us.html
@@ -45,7 +45,7 @@
                 <!-- RD Navbar Toggle-->
                 <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                 <!-- RD Navbar Brand-->
-                <a class="rd-navbar-brand" href="index.html"> <img src="images/tpc-logo.png" alt="" width="190"
+                <a class="rd-navbar-brand" href="index.html"> <img src="images/logotpc.png" alt="" width="190"
                     height="37" /></a>
               </div>
               <div class="rd-navbar-main-element">
@@ -960,7 +960,7 @@
       </div>
     </div>
     <div class="preloader">
-      <div class="preloader-logo"><img src="images/tpc-logo.png" alt="" width="190" height="37" />
+      <div class="preloader-logo"><img src="images/logotpc.png" alt="" width="190" height="37" />
       </div>
       <div class="preloader-body">
         <div id="loadingProgressG">
