--- a/our-alumni.html
+++ b/our-alumni.html
@@ -46,7 +46,7 @@
                                 <button class="rd-navbar-toggle"
                                     data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                                 <!-- RD Navbar Brand-->
-                                <a class="rd-navbar-brand" href="index.html"> <img src="images/tpc-logo.png"
+                                <a class="rd-navbar-brand" href="index.html"> <img src="images/logotpc.png"
                                         alt="" width="190" height="37" /></a>
                             </div>
                             <div class="rd-navbar-main-element">
@@ -1230,7 +1230,7 @@ Overall, my time at CCET exceeded my expectations in every way. I am confident t
     </div>
     
     <div class="preloader">
-        <div class="preloader-logo"><img src="images/tpc-logo.png" alt="" width="190" height="37" />
+        <div class="preloader-logo"><img src="images/logotpc.png" alt="" width="190" height="37" />
         </div>
         <div class="preloader-body">
             <div id="loadingProgressG">
