--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -270,7 +270,7 @@
                                 <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-2"
                                         data-toggle="tab">Declaration</a></li>
                                 <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-3"
-                                        data-toggle="tab">CV Format</a></li>
+                                        data-toggle="tab">Resume Template</a></li>
                             </ul>
                             <!-- Tab panes-->
                             <div class="tab-content">
@@ -364,9 +364,8 @@
                             <h4>Contact Information</h4>
                             <hr>
                             <ul class="list-sm">
-                                <li class="object-inline"><span
-                                        class="icon icon-md mdi mdi-map-marker text-primary"></span><a
-                                        class="link-default" href="#">Training & Placement Office, Chandigarh College of
+                                <li class="object-inline"><span class="icon icon-md mdi mdi-map-marker text-primary"></span>
+                                <a class="link-default" href="#">Training & Placement Office, Chandigarh College of
                                         Engineering and Technology, Sector-26, Chandigarh <br> Pincode - 160019
                                     </a></li>
                                 <li class="object-inline"><span class="icon icon-md mdi mdi-phone text-primary"></span>
@@ -377,7 +376,7 @@
                                 </li>
                                 <li class="object-inline"><span
                                         class="icon icon-md mdi mdi-email text-primary"></span><a class="link-default"
-                                        href="mailto:#">tpo@ccet.ac.in</a></li>
+                                        href="mailto:#">&nbsptpo@ccet.ac.in</a></li>
                             </ul>
                         </div>
                     </div>
