--- a/contact-us.html
+++ b/contact-us.html
@@ -916,7 +916,7 @@
                     </ul>
                   </li>
                   <li class="object-inline"><span class="icon icon-md mdi mdi-email text-primary"></span><a
-                      class="link-default" href="mailto:#">tpo@ccet.ac.in</a></li>
+                      class="link-default" href="mailto:#">&nbsptpo@ccet.ac.in</a></li>
                 </ul>
               </div>
             </div>
