--- a/events.html
+++ b/events.html
@@ -398,7 +398,7 @@
                                 </li>
                                 <li class="object-inline"><span
                                         class="icon icon-md mdi mdi-email text-primary"></span><a class="link-default"
-                                        href="mailto:#">tpo@ccet.ac.in</a></li>
+                                        href="mailto:#">&nbsptpo@ccet.ac.in</a></li>
                             </ul>
                         </div>
                     </div>
