--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <!-- A Few Words About Us-->
         <section class="section section-lg bg-gray-100">
             <div class="container">
-                <div class="row row-50 justify-content-center justify-content-lg-between">
+                <div class="row row-50 justify-content-center justify-content-lg-between align-items-center">
                     <div class="col-md-10 col-lg-6 col-xl-5">
                         <h3 class="wow-outer"><span class="wow slideInDown">Invitation</span></h3>
                         <p class="wow-outer"><span class="wow slideInDown text-justify" data-wow-delay=".05s">
@@ -649,7 +649,7 @@
                                 </li>
                                 <li class="object-inline"><span
                                         class="icon icon-md mdi mdi-email text-primary"></span><a class="link-default"
-                                        href="mailto:#">tpo@ccet.ac.in</a></li>
+                                        href="mailto:#">&nbsptpo@ccet.ac.in</a></li>
                             </ul>
                         </div>
                     </div>
